# ccmcp

./: .gitignore  README.md  pyproject.toml
src/ccmcp/: cli.py  server.py
src/claudecodemcp/: __init__.py  cli.py
